--- a/style.css
+++ b/style.css
@@ -21,3 +21,19 @@ h1{
     margin: auto;
     margin-top: 20px;
 }
+
+.birthdayBtn, .attentionInv{
+   display: none; 
+}
+
+.attention{
+    background-color: rgb(248, 87, 87);
+    border-radius: 10px;
+color: whitesmoke;
+    max-width: 80%;
+    height: 10px;
+    margin: auto;
+    margin-top: 10px;
+    padding: 10px;
+}
+
