--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.birthday-block {
+.birthday_block {
     border: 1px solid #2c2c2c;
     border-radius: 15px;
     padding: 20px;
-    width: 25%;
+    width: 300px;
     margin: auto;
 }
 
@@ -38,7 +38,7 @@ h1 {
     border-radius: 10px;
     color: whitesmoke;
     max-width: 80%;
-    height: 10px;
+    min-height: 10px;
     margin: auto;
     margin-top: 10px;
     padding: 10px;
